Add old "Breeze" Task Switcher here under the new name "Sidebar"
Since it's now been taken out of the Breeze Global Theme, which was a
bit of an odd place for it, let's move it here so people who liked it
can continue to use it.

This commit includes the code taken verbatim from kdeplasma-addons as
of commit a4ec95fb8edecab693c26ccd130fa3e99b62322b.

See https://invent.kde.org/plasma/plasma-desktop/-/issues/53

--- a/windowswitchers/CMakeLists.txt
+++ b/windowswitchers/CMakeLists.txt
@@ -4,3 +4,4 @@ install(DIRECTORY big_icons    DESTINATION  ${TABBOX_DIR})
 install(DIRECTORY compact      DESTINATION ${TABBOX_DIR})
 install(DIRECTORY coverswitch  DESTINATION ${TABBOX_DIR})
 install(DIRECTORY flipswitch   DESTINATION ${TABBOX_DIR})
+install(DIRECTORY sidebar      DESTINATION ${TABBOX_DIR})
