--- a/applets/diskquota/CMakeLists.txt
+++ b/applets/diskquota/CMakeLists.txt
@@ -8,19 +8,16 @@ plasma_install_package(package org.kde.plasma.diskquota)
 # Notes Library
 add_definitions(-DTRANSLATION_DOMAIN="plasma_applet_org.kde.plasma.diskquota")
 
-set(diskquota_SRCS
+ecm_add_qml_module(diskquotaplugin URI org.kde.plasma.private.diskquota)
+target_sources(diskquotaplugin PRIVATE
     plugin/plugin.cpp
     plugin/DiskQuota.cpp
     plugin/QuotaListModel.cpp
     plugin/QuotaItem.cpp
 )
-
-add_library(diskquotaplugin SHARED ${diskquota_SRCS})
-
 target_link_libraries(diskquotaplugin
-                      Qt::Quick
-                      KF6::CoreAddons
-                      KF6::I18n)
-
-install(FILES plugin/qmldir DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/diskquota)
-install(TARGETS diskquotaplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/diskquota)
+    Qt::Quick
+    KF6::CoreAddons
+    KF6::I18n
+)
+ecm_finalize_qml_module(diskquotaplugin)
