--- a/profiles/CMakeLists.txt
+++ b/profiles/CMakeLists.txt
@@ -6,11 +6,10 @@ target_include_directories(profiles_utility_static
     PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
 
-add_library(profiles_qml_plugin profilesplugin.cpp)
+ecm_add_qml_module(profiles_qml_plugin URI org.kde.plasma.private.profiles)
+target_sources(profiles_qml_plugin PRIVATE profilesplugin.cpp)
 target_link_libraries(profiles_qml_plugin
     Qt::Qml
     profiles_utility_static
 )
-
-install(TARGETS profiles_qml_plugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/profiles/)
-install(FILES qmldir DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/profiles)
+ecm_finalize_qml_module(profiles_qml_plugin)
