alternatecalendar: support solar terms in Chinese lunar calendar
In Chinese lunar calendar, solar terms, also known as "节气", are
points in time that mark the changing seasons and the solar movements.
There are 24 solar terms in total, with each term representing a
specific astronomical event or natural phenomenon. These solar terms
are based on the position of the sun relative to the Earth and are
used to determine the timing of various agricultural activities,
traditional festivals, and other cultural practices in China.

--- a/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${HAVE_ICU})
         provider/hebrewcalendar.cpp
         provider/indiancalendar.cpp
         provider/islamiccalendar.cpp
+        provider/solarutils.h
     )
     set(alternatecalendar_LINK_LIBRARIES
         ${alternatecalendar_LINK_LIBRARIES}
