--- a/runners/datetime/CMakeLists.txt
+++ b/runners/datetime/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN="plasma_runner_datetime")
 
-kcoreaddons_add_plugin(org.kde.datetime SOURCES datetimerunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(org.kde.datetime SOURCES datetimerunner.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(org.kde.datetime
     KF6::Runner
     KF6::KIOWidgets
