--- a/runners/konsoleprofiles/CMakeLists.txt
+++ b/runners/konsoleprofiles/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN="plasma_runner_konsoleprofiles")
 
-kcoreaddons_add_plugin(krunner_konsoleprofiles SOURCES konsoleprofiles.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_konsoleprofiles SOURCES konsoleprofiles.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_konsoleprofiles
     KF6::Runner
     KF6::ConfigCore
