--- a/runners/spellchecker/CMakeLists.txt
+++ b/runners/spellchecker/CMakeLists.txt
@@ -9,12 +9,12 @@ target_link_libraries(krunner_spellcheck_static
     KF6::SonnetCore
 )
 
-kcoreaddons_add_plugin(krunner_spellcheck SOURCES spellcheck.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_spellcheck SOURCES spellcheck.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_spellcheck
     krunner_spellcheck_static
 )
 
-kcoreaddons_add_plugin(kcm_krunner_spellcheck INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner/kcms")
+kcoreaddons_add_plugin(kcm_krunner_spellcheck INSTALL_NAMESPACE "kf6/krunner/kcms")
 target_compile_definitions(kcm_krunner_spellcheck PRIVATE -DKRUNNER_PLUGIN_NAME="krunner_spellcheck")
 ki18n_wrap_ui(kcm_krunner_spellcheck spellcheck_config.ui)
 target_sources(kcm_krunner_spellcheck PRIVATE spellcheck_config.cpp)
