Port applets to the new api
The root item is now ContainmentItem/PlasmoidItem, representations and tooltips are direct properties of them

https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/778

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
     KCMUtils
     Notifications
     Plasma
+    PlasmaQuick
     Plasma5Support
     Runner
     Service
