Fix license statement
GPL-2.1 doesn't exist; from context it is obvious that LGPL-2.1 is meant

--- a/runners/datetime/autotests/CMakeLists.txt
+++ b/runners/datetime/autotests/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: GPL-2.1-only OR LGPL-3.0-only OR LicenseRef-KDE-Accepted-LGPL
+# SPDX-License-Identifier: LGPL-2.1-only OR LGPL-3.0-only OR LicenseRef-KDE-Accepted-LGPL
 # SPDX-FileCopyrightText: 2023 Natalie Clarius <natalie_clarius@yahoo.de>
 include(ECMAddTests)
 
