Port away from PlasmaCore.SortProxyModel
Use KItemModels.KSortFilterProxyModel instead, adapting to the new API.
KItemModels is added as a RUNTIME dependency.

Part of https://invent.kde.org/frameworks/plasma-framework/-/issues/19

Depends on https://invent.kde.org/frameworks/kitemmodels/-/merge_requests/67

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,12 @@ set_package_properties(KirigamiAddons PROPERTIES
     TYPE RUNTIME
 )
 
+find_package(KItemModels CONFIG)
+set_package_properties(KItemModels PROPERTIES
+    DESCRIPTION "Set of item models extending the Qt model-view framework"
+    PURPOSE "Required at runtime for the Dictionary, Kate Profiles, and Konsole Profiles applets"
+    TYPE RUNTIME
+)
 
 find_package(ICU 66.1 COMPONENTS uc i18n)
 set_package_properties(ICU
