--- a/applets/timer/CMakeLists.txt
+++ b/applets/timer/CMakeLists.txt
@@ -2,7 +2,7 @@ plasma_install_package(package org.kde.plasma.timer)
 
 ecm_add_qml_module(timerplugin URI org.kde.plasma.private.timer)
 target_sources(timerplugin PRIVATE plugin/timerplugin.cpp)
-target_link_libraries(timerplugin Qt::Core Qt::Qml)
+target_link_libraries(timerplugin PRIVATE Qt::Core Qt::Qml)
 ecm_finalize_qml_module(timerplugin DESTINATION ${KDE_INSTALL_QMLDIR})
 
 install(FILES timer.svgz
