--- a/applets/quickshare/plugin/CMakeLists.txt
+++ b/applets/quickshare/plugin/CMakeLists.txt
@@ -3,7 +3,7 @@ qt_add_dbus_interface(purposeplugin_SRCS ${activitymanagerslc_xml} activitymanag
 
 ecm_add_qml_module(purposeplugin URI org.kde.plasma.private.purpose)
 target_sources(purposeplugin PRIVATE purposeplugin.cpp contenttracker.cpp ${purposeplugin_SRCS})
-target_link_libraries(purposeplugin
+target_link_libraries(purposeplugin PRIVATE
     Qt::Quick
     Qt::DBus
     KF6::CoreAddons
