--- a/effects/cube/kcm/CMakeLists.txt
+++ b/effects/cube/kcm/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 set(kwin_cube_config_SOURCES cubeeffectkcm.cpp)
 ki18n_wrap_ui(kwin_cube_config_SOURCES cubeeffectkcm.ui)
-qt5_add_dbus_interface(kwin_cube_config_SOURCES ${KWIN_EFFECTS_INTERFACE} kwineffects_interface)
+# qt5_add_dbus_interface(kwin_cube_config_SOURCES ${KWIN_EFFECTS_INTERFACE} kwineffects_interface)
 
 kcoreaddons_add_plugin(kwin_cube_config INSTALL_NAMESPACE "kwin/effects/configs" SOURCES ${kwin_cube_config_SOURCES})
 target_compile_definitions(kwin_cube_config PRIVATE
@@ -12,11 +12,11 @@ target_compile_definitions(kwin_cube_config PRIVATE
 )
 kconfig_add_kcfg_files(kwin_cube_config ../cubeconfig.kcfgc)
 target_link_libraries(kwin_cube_config
-    KF5::ConfigCore
-    KF5::ConfigGui
-    KF5::ConfigWidgets
-    KF5::CoreAddons
-    KF5::GlobalAccel
-    KF5::I18n
-    KF5::XmlGui
+    KF6::ConfigCore
+    KF6::ConfigGui
+    KF6::ConfigWidgets
+    KF6::CoreAddons
+    KF6::GlobalAccel
+    KF6::I18n
+    KF6::XmlGui
 )
