Adjust indentation in CMakeLists.txt files

--- a/applets/comic/CMakeLists.txt
+++ b/applets/comic/CMakeLists.txt
@@ -16,15 +16,16 @@ set(comic_SRCS
 kcoreaddons_add_plugin(org.kde.plasma.comic SOURCES ${comic_SRCS} INSTALL_NAMESPACE "plasma/applets")
 
 target_link_libraries(org.kde.plasma.comic
-                      Qt::Gui
-                      Qt::Widgets
-                      KF6::Plasma
-                      KF6::I18n
-                      KF6::KIOCore
-                      KF6::KIOWidgets
-                      KF6::Notifications
-                      KF6::XmlGui
-                      plasma_engine_comic)
+    Qt::Gui
+    Qt::Widgets
+    KF6::Plasma
+    KF6::I18n
+    KF6::KIOCore
+    KF6::KIOWidgets
+    KF6::Notifications
+    KF6::XmlGui
+    plasma_engine_comic
+)
 
 install(FILES comic.knsrc DESTINATION ${KDE_INSTALL_KNSRCDIR})
 plasma_install_package(package org.kde.plasma.comic)
