applets: Specify plasma_install_package in parent CMakeLists.txt file rather than having a oneliner-file

--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -1,16 +1,17 @@
+plasma_install_package(binary-clock/package org.kde.plasma.binaryclock)
+plasma_install_package(calculator/package org.kde.plasma.calculator)
+plasma_install_package(fuzzy-clock/package org.kde.plasma.fuzzyclock)
+plasma_install_package(katesessions org.kde.plasma.addons.katesessions)
+plasma_install_package(keyboardindicator org.kde.plasma.keyboardindicator)
 plasma_install_package(kickerdash org.kde.plasma.kickerdash)
 plasma_install_package(konsoleprofiles/package org.kde.plasma.konsoleprofiles)
-plasma_install_package(keyboardindicator org.kde.plasma.keyboardindicator)
-plasma_install_package(katesessions org.kde.plasma.addons.katesessions)
+plasma_install_package(userswitcher/package org.kde.plasma.userswitcher)
 
-add_subdirectory(binary-clock)
-add_subdirectory(calculator)
 add_subdirectory(colorpicker)
 add_subdirectory(comic)
 add_subdirectory(dict)
 add_subdirectory(diskquota)
 add_subdirectory(fifteenPuzzle)
-add_subdirectory(fuzzy-clock)
 add_subdirectory(grouping)
 add_subdirectory(mediaframe)
 add_subdirectory(nightcolor)
@@ -18,6 +19,5 @@ add_subdirectory(notes)
 add_subdirectory(quicklaunch)
 add_subdirectory(quickshare)
 add_subdirectory(timer)
-add_subdirectory(userswitcher)
 add_subdirectory(weather)
 add_subdirectory(webbrowser)
