--- a/effects/cube/kcm/CMakeLists.txt
+++ b/effects/cube/kcm/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 set(kwin_cube_config_SOURCES cubeeffectkcm.cpp)
 ki18n_wrap_ui(kwin_cube_config_SOURCES cubeeffectkcm.ui)
-# qt5_add_dbus_interface(kwin_cube_config_SOURCES ${KWIN_EFFECTS_INTERFACE} kwineffects_interface)
+qt_add_dbus_interface(kwin_cube_config_SOURCES ${KWIN_EFFECTS_INTERFACE} kwineffects_interface)
 
 kcoreaddons_add_plugin(kwin_cube_config INSTALL_NAMESPACE "kwin/effects/configs" SOURCES ${kwin_cube_config_SOURCES})
 target_compile_definitions(kwin_cube_config PRIVATE
@@ -19,4 +19,5 @@ target_link_libraries(kwin_cube_config
     KF6::GlobalAccel
     KF6::I18n
     KF6::XmlGui
+    KF6::KCMUtils
 )
