--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -25,11 +25,11 @@ Dependencies:
     'frameworks/kservice': '@latest-kf6'
     'frameworks/kwidgetsaddons': '@latest-kf6'
     'frameworks/kxmlgui': '@latest-kf6'
-    'frameworks/plasma-framework': '@latest-kf6'
     'frameworks/solid': '@latest-kf6'
     'frameworks/sonnet': '@latest-kf6'
     'frameworks/kunitconversion': '@latest-kf6'
     'libraries/kirigami-addons': '@latest-kf6'
+    'plasma/plasma-framework': '@same'
     'plasma/plasma-workspace': '@same'
     'plasma/plasma5support': '@same'
 - 'on': ['Linux']
