--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -27,7 +27,7 @@ Dependencies:
     'frameworks/solid': '@latest'
     'frameworks/sonnet': '@latest'
     'frameworks/kunitconversion': '@latest'
-    'plasma/plasma-framework': 'kf5'
+    'plasma/libplasma': 'kf5'
     'plasma/plasma-workspace': '@same'
 - 'on': ['Linux']
   'require':
