Fix set_package_properties to the match find_package call
GIT_SILENT

--- a/applets/dict/CMakeLists.txt
+++ b/applets/dict/CMakeLists.txt
@@ -1,6 +1,6 @@
 find_package(Qt6WebEngineQuick ${QT_MIN_VERSION} CONFIG)
 
-set_package_properties(Qt6WebEngine PROPERTIES
+set_package_properties(Qt6WebEngineQuick PROPERTIES
     PURPOSE "Needed by the dict applet"
     URL "https://doc.qt.io/qt-6/qtwebengine-index.html"
     TYPE OPTIONAL
