--- a/applets/webbrowser/CMakeLists.txt
+++ b/applets/webbrowser/CMakeLists.txt
@@ -1,8 +1,8 @@
 find_package(Qt6WebEngineQuick ${QT_MIN_VERSION} CONFIG)
 
-set_package_properties(Qt6WebEngine PROPERTIES
+set_package_properties(Qt6WebEngineQuick PROPERTIES
     PURPOSE "Needed by the web browser applet"
-    URL "https://doc.qt.io/qt-5/qtwebengine-index.html"
+    URL "https://doc.qt.io/qt-6/qtwebengine-index.html"
     TYPE OPTIONAL
 )
 
