Mark QtQuick3D as a runtime dependency
So it's explicitly listed as a runtime dependency and it's clear to the
distros that kdeplasma-addons package should pull qt6-quick3d.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,13 @@ if(ICU_FOUND)
     set(HAVE_ICU TRUE)
 endif()
 
+find_package(Qt6Quick3D CONFIG)
+set_package_properties(Qt6Quick3D PROPERTIES
+    DESCRIPTION "A high-level API for creating 3D content and 3D user interfaces based on Qt Quick"
+    PURPOSE "Required for desktop cube"
+    TYPE RUNTIME
+)
+
 add_definitions(
     -DQT_DEPRECATED_WARNINGS
     -DQT_NO_URL_CAST_FROM_STRING
