--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,12 @@ find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED
 find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
     Config
     CoreAddons
+    DBusAddons
     Declarative
     GlobalAccel
     Holidays
     I18n
+    Auth
     KIO
     KCMUtils
     Notifications
@@ -120,6 +122,7 @@ ecm_set_disabled_deprecation_versions(
 )
 
 add_subdirectory(dict)
+add_subdirectory(kdeds)
 add_subdirectory(profiles)
 add_subdirectory(applets)
 add_subdirectory(runners)
