alternatecalendar: Port to declarative type registration
Fixes #13

qt.qml.typeregistration: Invalid QML element name "CalendarSystem"; value type names should begin with a lowercase letter

And in fact CalendarSystem isn't used in QML, so it doesn't have to be
registered at all.

Relicensed CMakeLists.txt as per Fushan's explicit request.

--- a/plasmacalendarplugins/alternatecalendar/config/plugin/CMakeLists.txt
+++ b/plasmacalendarplugins/alternatecalendar/config/plugin/CMakeLists.txt
@@ -1,14 +1,26 @@
 # SPDX-FileCopyrightText: 2022 Fushan Wen <qydwhotmail@gmail.com>
+# SPDX-FileCopyrightText: 2024 ivan tkachenko <me@ratijas.tk>
+#
+# SPDX-License-Identifier: BSD-3-Clause
 
-# SPDX-License-Identifier: GPL-2.0-or-later
-
-ecm_add_qml_module(plasmacalendaralternatecalendarconfig URI org.kde.plasmacalendar.alternatecalendarconfig)
-target_sources(plasmacalendaralternatecalendarconfig PRIVATE configplugin.cpp configstorage.cpp ../../calendarsystem.h)
-
-target_link_libraries(plasmacalendaralternatecalendarconfig PRIVATE
-    Qt::Qml
-    Qt::Core
-    KF6::ConfigCore
-    KF6::I18n
+ecm_add_qml_module(plasmacalendaralternatecalendarconfig
+    URI org.kde.plasma.private.alternatecalendarconfig
+    GENERATE_PLUGIN_SOURCE
 )
+
+target_sources(plasmacalendaralternatecalendarconfig
+    PRIVATE
+        ../../calendarsystem.h
+        configstorage.cpp
+        configstorage.h
+)
+
+target_link_libraries(plasmacalendaralternatecalendarconfig
+    PRIVATE
+        Qt::Qml
+        Qt::Core
+        KF6::ConfigCore
+        KF6::I18n
+)
+
 ecm_finalize_qml_module(plasmacalendaralternatecalendarconfig)
