appiumtests: add basic test for alternate calendar
Make sure the config dialog can save config.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -39,6 +39,7 @@ Dependencies:
 RuntimeDependencies:
 - 'on': ['Linux']
   'require':
+    'plasma/plasma-desktop': '@same'
     'plasma/plasma-nano': '@same' # For appium tests
 
 Options:
