--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 
 set(PROJECT_DEP_VERSION "6.0.80")
 set(QT_MIN_VERSION "6.7.0")
-set(KF6_MIN_VERSION 5.240.0)
+set(KF6_MIN_VERSION "6.2.0")
 set(KDE_COMPILERSETTINGS_LEVEL "5.82")
 
 set(CMAKE_CXX_STANDARD 20)
