Don't include quiet packages in feature_summary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,4 +148,4 @@ ecm_qt_install_logging_categories(EXPORT KDEPLASMAADDONS
 )
 
 
-feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
+feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
