--- a/applets/notes/CMakeLists.txt
+++ b/applets/notes/CMakeLists.txt
@@ -14,5 +14,6 @@ target_sources(notesplugin PRIVATE
 target_link_libraries(notesplugin PRIVATE
     Qt::Quick
     KF6::CoreAddons
+    KF6::KIOCore
 )
 ecm_finalize_qml_module(notesplugin)
